--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
